ChangeLog

Name: William Lai
Date: 10-14-2013
Description: Stalemate, legal move lists, animation tweaking
    * src/Game.java: Changed some function signatures for flexibility
    * src/King.java: Changed some legal move conditions
    * src/StandardChessGame.java: Implemented stalemate, added allMoves function for future utility
    * src/StandardChessGameAnimation.java: Tweaked animation parameters to make the UI a bit smoother.

Name: Vincent Wong
Date: 10-10-2013
Description: Added board markers, added player names
    * src/StandardChessGame.java: Implemented a bit of Player integration
    * src/StandardChessGameGraphics.java: Added board marker painting, player name painting
    * src/HumanPlayer.java: New file. Doesn't really do anything though except allows instantiation

Name: Vincent Wong
Date: 10-03-2013
Description: Added standard chess piece images, added animation
    * src/StandardChessGame.java: Tweaked selection mechanics (left click to select and move,
    right click to deselect).
    * src/StandardChessGameGraphics.java: Added utility painting functions for animation.
    * src/StandardChessGameAnimation.java: New class. Runs a thread to animate chess moves.

Name: William Lai
Date: 10-03-2013
Description: Implemented pawn promotion
    * src/StandardChessGame.java: Forgot about pawn promotion. It is now implemented.

Name: William Lai
Date: 10-02-2013
Description: Fixed knight check bug
    * src/StandardChessGame.java: Fixed bug that did not account for knight when resolving checks. Made isInWay function more robust to handle null piece and knights.

Name: William Lai
Date: 09-25-2013
Description: Finished game logic, started adding test functions
     * src/Board.java: Added removePiece function for en passant.
     * src/StandardChessGame.java: Added en passant logic. Started writing function to parse algebraic notation and make moves from them.

Name: Eric Du
Date: 09-23-2013