@@ -19,5 +19,6 @@ public abstract class Game extends Applet implements Runnable, MouseListener
 	{
 		m_turn = nextTurn;
 	}
-
+	
+	public abstract void getHumanMove(); //not 100% sure about this choice
 }
